# RustChess

./: Cargo.toml  README.md
src/: engine.rs  gen_iter.rs  init.rs  main.rs  pgn.rs  syzygy.rs
