[package]
name = "RustChess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex="1.5.4"
auto_ops="0.3.0"
counter="0.5.2"
thiserror = "1.0"
ahash="*"
rand="*"
requests="*"
json="0.11.15"

[profile.release]
lto=true
debug = true